@@ -1,7 +1,11 @@
 Maverick Synergy 3.0.0-RC4 - TBC
 
+Features
+    o Added shutdownAndExit method to SshEngine designed for calling before application shutdown (it is the applications responsibility to exit, this is just for clean up).
+    
 Bug Fixes
     o OpenSSH RSA certificate incorrectly attempted to be decoded as ECDSA.
+    o NPE when DefaultLoggingContext.shutdown is called and no file watcher has been initialized.
     
 =================
 =  HISTORY      =
